<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="8dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/play_button" />

        <TextView
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/custom_bg"
            android:clickable="true"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="14sp"
            android:paddingTop="15dp"
            android:text="@string/Play_recording"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#19000000" />

    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="8dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/favorite" />

        <TextView
            android:id="@+id/fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/custom_bg"
            android:clickable="true"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="14sp"
            android:paddingTop="15dp"
            android:text="@string/Add_to_favourite"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#19000000" />

    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/delete_button" />

        <TextView
            android:layout_alignParentStart="true"
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bg"
            android:clickable="true"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="14sp"
            android:paddingTop="15dp"
            android:text="@string/Delete_recording"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#19000000" />

    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/muted" />

        <TextView
            android:layout_alignParentStart="true"
            android:id="@+id/turn_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bg"
            android:clickable="true"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="14sp"
            android:paddingTop="15dp"
            android:text="Turn_off_recording"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#19000000" />

    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_share_black_24dp" />

        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/custom_bg"
            android:clickable="true"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="14sp"
            android:paddingTop="15dp"
            android:text="@string/Share_recording"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#19000000" />

    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_cloud_computing" />

        <TextView
            android:layout_alignParentStart="true"
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bg"
            android:clickable="true"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="14sp"
            android:paddingTop="15dp"
            android:text="Upload to cloud"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>